crates/shipper-config/src/runtime/snapshots/shipper_config__runtime__tests__snapshot_tests__snapshot_fast_policy_no_verify.snap
---
source: crates/shipper-config/src/runtime/mod.rs
expression: converted
---
RuntimeOptions {
    allow_dirty: false,
    skip_ownership_check: false,
    strict_ownership: false,
    no_verify: true,
    max_attempts: 1,
    base_delay: 0ns,
    max_delay: 0ns,
    retry_strategy: Exponential,
    retry_jitter: 0.25,
    retry_per_error: PerErrorConfig {
        retryable: None,
        ambiguous: None,
        permanent: None,
    },
    verify_timeout: 60s,
    verify_poll_interval: 5s,
    state_dir: ".shipper",
    force_resume: false,
    policy: Fast,
    verify_mode: None,
    readiness: ReadinessConfig {
        enabled: false,
        method: Api,
        initial_delay: 100ms,
        max_delay: 60s,
        max_total_wait: 300s,
        poll_interval: 5s,
        jitter_factor: 0.25,
        index_path: None,
        prefer_index: false,
    },
    output_lines: 20,
    force: false,
    lock_timeout: 30s,
    parallel: ParallelConfig {
        enabled: false,
        max_concurrent: 4,
        per_package_timeout: 120s,
    },
    webhook: WebhookConfig {
        url: "",
        webhook_type: Generic,
        secret: None,
        timeout_secs: 30,
    },
    encryption: EncryptionConfig {
        enabled: false,
        passphrase: None,
        env_var: None,
    },
    registries: [],
    registry_policies: {},
    resume_from: None,
    rehearsal_registry: None,
    rehearsal_skip: false,
    rehearsal_smoke_install: None,
}
